--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <style>
       @font-face {
         font-family: 'xkcd';
-        src: url('/static/media/xkcd.otf') format('opentype');
+        src: url('/fonts/xkcd.otf') format('opentype');
         font-weight: normal;
         font-style: normal;
       }
       @font-face {
         font-family: 'xkcd';
-        src: url('/static/media/xkcd-Regular.otf') format('opentype');
+        src: url('/fonts/xkcd-Regular.otf') format('opentype');
         font-weight: 400;
         font-style: normal;
       }
