--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,20 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
+    <style>
+      @font-face {
+        font-family: 'xkcd';
+        src: url('%PUBLIC_URL%/fonts/xkcd.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'xkcd';
+        src: url('%PUBLIC_URL%/fonts/xkcd-Regular.otf') format('opentype');
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
