--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <style>
       @font-face {
         font-family: 'xkcd';
-        src: url('%PUBLIC_URL%/fonts/xkcd.otf') format('opentype');
+        src: url('%PUBLIC_URL%/fonts/xkcd.woff2') format('woff2');
         font-weight: normal;
         font-style: normal;
       }
       @font-face {
         font-family: 'xkcd';
-        src: url('%PUBLIC_URL%/fonts/xkcd-Regular.otf') format('opentype');
+        src: url('%PUBLIC_URL%/fonts/xkcd-Regular.woff2') format('woff2');
         font-weight: 400;
         font-style: normal;
       }
